This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-12-13 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/OstringStream.cpp: use portable_vsnprintf(), not
	portable_snprintf().
	
2001-12-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.6

	* TODO: Mark PatternLayout and SimpleConfigurator as done.

	* NEWS: release 0.2.6
	
	* Makefile.am: exclude CVS subdir from doc-dist tar ball.
	
	* include/log4cpp/config-win32.h: #define int64_t as __int64, 
	#define LOG4CPP_MISSING_INT64_OSTREAM_OP

	* src/PatternLatout.cpp: workaround missing << operator for int64_t
	on MSVC.
	
	* src/TimeStamp.cpp: fix ref typo for timeb struct.

	* include/log4cpp/config-win32.h: #define LOG4CPP_USE_CLEANUP.

2001-11-30 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* tests/testbench.cpp: use TimeStamp instead of ::time()

	* include/log4cpp/Makefile.am: added config-openvms.h to headers.

	* include/log4cpp/Appender.hh, include/log4cpp/HierarchyMaintainer.hh,
	include/log4cpp/Log4cpCleanup.hh, src/Appender.cpp,
	src/HierarchyMaintainer.cpp, src/Log4cppCleanup.cpp: conditionally
	use Log4cppCleanup, depending on #define LOG4CPP_USE_CLEANUP. The new 
	default is NOT to use it, because it causes segfaults on some 
	platforms (e.g. Solaris).

2001-11-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Portability.hh: use config-openvms.h based on 
	__OPENVMS__ flag.

	* src/snprintf.c: replaced static_cast with C-style cast: this file
	should remain C only.

	* configure.in, Makefile.am: added openvms subdirectory.
	* openvms/Makefile.am: added empty Makefile template.

	* THANKS: added Tony Cheung.

	* src/Makefile.am: added snprintf.c to noinst_HEADERS.

	* include/log4cpp/TimeStamp.hh: moved class description to the 
	correct location.
		
2001-11-28 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/snprintf.c: added portable snprintf 2.2 from 
	http://www.ijs.si/software/snprintf/
